pull&patch meetjestad/basicmac automagically

--- a/platformio.ini
+++ b/platformio.ini
@@ -15,5 +15,6 @@ framework = arduino
 
 monitor_speed = 115200
 
-lib_deps = basicmac
-lib_extra_dirs = lib
+extra_scripts =
+    pre:deps_basicmac.py
+    
